--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint-plugin-unused-imports": "^3.0.0"
   },
   "publishConfig": {
-    "access": "public"
+    "@tzwzx:registry": "https://npm.pkg.github.com"
   },
   "engines": {
     "node": "20.x",
