Remove 'bun' engine from package.json
The 'bun' engine was removed from the package.json file. This change could be due to removing a previously dependent package or the deprecation of the 'bun' engine itself, and it aims to clean and update the project dependencies.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@tzwzx:registry": "https://npm.pkg.github.com"
   },
   "engines": {
-    "node": "20.x",
-    "bun": "1.x"
+    "node": "20.x"
   }
 }
