--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tzwzx:registry": "https://npm.pkg.github.com"
   },
   "engines": {
-    "node": "20.x"
+    "node": "20.x",
+    "bun": "1.x"
   }
 }
