--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint-plugin-unused-imports": "^3.0.0"
   },
   "publishConfig": {
-    "@tzwzx:registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com"
   },
   "engines": {
     "node": "20.x",
