--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tzwzx/eslint-config",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "ESLint shareable config",
   "license": "MIT",
   "main": "index.js",
@@ -15,7 +15,8 @@
     "eslint-plugin-unused-imports": "^3.0.0"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com",
+    "access": "public"
   },
   "engines": {
     "node": "20.x",
