Update package version and modify publishConfig in package.json
The package version has been updated from 1.0.4 to 1.0.5 in the package.json file. Moreover, the "access" field in the "publishConfig" was removed to streamline the configuration. Previously, it was set to "public", which allowed public access to the package on the GitHub NPM registry.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tzwzx/eslint-config",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "ESLint shareable config",
   "license": "MIT",
   "main": "index.js",
@@ -15,8 +15,7 @@
     "eslint-plugin-unused-imports": "^3.0.0"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com",
-    "access": "public"
+    "registry": "https://npm.pkg.github.com"
   },
   "engines": {
     "node": "20.x",
