--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "@tzwzx/eslint-config",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "description": "ESLint shareable config",
   "license": "MIT",
   "main": "index.js",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-no-relative-import-paths": "^1.5.3",
-    "eslint-plugin-perfectionist": "^2.6.0",
-    "eslint-plugin-unused-imports": "^3.1.0"
+    "@typescript-eslint/eslint-plugin": "7.2.0",
+    "@typescript-eslint/parser": "7.2.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.3",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-no-relative-import-paths": "1.5.3",
+    "eslint-plugin-perfectionist": "2.6.0",
+    "eslint-plugin-unused-imports": "3.1.0"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
